--- a/css/custom.css
+++ b/css/custom.css
@@ -1,4 +1,15 @@
-/*.header {
-    background-color: #F7F7F7;
-	color: #636363;
-}*/
+/*
+ * PRIMARY COLORS FOR WEBSITE
+ * Sky Blue: #87CEEB
+ *
+ */
+
+.fixed-nav-bar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 9999;
+    width: 100%;
+    height: 50px;
+    background-color: #87CEEB;
+}
