Added color palette

--- a/css/custom.css
+++ b/css/custom.css
@@ -1,7 +1,9 @@
 /*
- * PRIMARY COLORS FOR WEBSITE
- * Sky Blue: #87CEEB
- *
+ * Color Palette
+ * #E3FDFD
+ * #CBF1F5
+ * #A6E3E9
+ * #71C9CE
  */
 
 .fixed-nav-bar {
