--- a/css/custom.css
+++ b/css/custom.css
@@ -6,12 +6,38 @@
  * #71C9CE
  */
 
-.fixed-nav-bar {
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 9999;
-    width: 100%;
-    height: 50px;
-    background-color: #87CEEB;
+/* Sections
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+.section {
+    padding: 8rem 0 7rem;
+    text-align: center;
+}
+
+.section-heading,
+.section-description {
+    margin-bottom: 1.2rem;
+}
+
+/* Intro
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+.intro {
+    background-color: #E3FDFD;
+}
+
+/* About_Me
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+.about_me {
+    background-color: #CBF1F5;
+}
+
+/* Projects
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+.projects {
+    background-color: #A6E3E9;
+}
+
+/* Made_By
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+.made_by {
+    background-color: #71C9CE;
 }
