Added anchor and attempt on jQuery SScrolling

--- a/css/custom.css
+++ b/css/custom.css
@@ -24,9 +24,9 @@
     background-color: #E3FDFD;
 }
 
-/* About_Me
+/* About Me
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
-.about_me {
+.me {
     background-color: #CBF1F5;
 }
 
@@ -36,8 +36,8 @@
     background-color: #A6E3E9;
 }
 
-/* Made_By
+/* Contact Me
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
-.made_by {
+.contact {
     background-color: #71C9CE;
 }
