--- a/css/custom.css
+++ b/css/custom.css
@@ -12,18 +12,14 @@ body {
     font-family: 'Julius Sans One', Arial, sans-serif;
 }
 
-.page-fullscreen {
-	/*height: 100%;
-	min-height: 500px;*/
-	width: 100%;
-	position: relative;
-	overflow: hidden;
+.page-body {
+    background-color: #EAEAEA;
 }
 
 /* Text/Links
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 p {
-    margin-top: 0;
+    /*margin-top: 0;*/
     font-family: 'Open Sans', sans-serif;
 }
 
@@ -40,7 +36,9 @@ h7 {
 /* Sections
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 .section {
-    padding: 8rem 0 7rem;
+    /*padding: 8rem 0 7rem;*/
+    padding-top: 5rem;
+    padding-bottom: 5rem;
 }
 
 .section-heading,
@@ -51,36 +49,61 @@ h7 {
 /* Header
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 .header {
-    background-color: #08D9D6;
+	height: 100vh;
+	min-height: 500px;
+	width: 100%;
     text-align: center;
+    color: white;
+	position: relative;
+	overflow: hidden;
 }
 
-.header a {
-    color: black;
+.header-image {
+    height: 100%;
+    width: 100%;
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.8)), url("../images/header.jpg") no-repeat center;
+    background-size: cover;
+    position: fixed;
+    z-index: -1;
+}
+
+.header-wrapper {
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+    margin: 0 auto;
+}
+
+.header-text {
+    font-family: 'Julius Sans One', sans-serif;
+    position: relative;
+    top: -77px;
+    font-size: 4rem;
+    letter-spacing: 4px;
+}
+
+.header-text-2 {
+	transform: translateY(-250%);
+}
+
+.header-link {
+    display: flex;
+    text-align: center;
+    position: absolute;
+    bottom: 5%;
+    right: 5%;
+}
+
+#header a {
+    color: white;
     font-weight: bold;
     text-decoration: none;
-    /*text-shadow: 2px 2px 1px rgba(0, 0, 0, .2);*/
 }
 
-.header a.me:hover {
-    color: black;
+#header a:hover {
+    color: white;
     font-weight: bold;
     text-decoration: underline;
-    text-shadow: 2px 2px 1px rgba(0, 0, 0, .2);
-}
-
-.header a.projects:hover {
-    color: black;
-    font-weight: bold;
-    text-decoration: underline;
-    text-shadow: 2px 2px 1px rgba(0, 0, 0, .2);
-}
-
-.header a.contact:hover {
-    color: black;
-    font-weight: bold;
-    text-decoration: underline;
-    text-shadow: 2px 2px 1px rgba(0, 0, 0, .2);
 }
 
 /* About Me
