Added media check to see if mobile for footer

--- a/css/custom.css
+++ b/css/custom.css
@@ -16,6 +16,12 @@ body {
     background-color: #EAEAEA;
 }
 
+@media (max-width: 550px) {
+	.footer {
+		text-align: right;
+	}
+}
+
 /* Text/Links
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 p {
