Fixed Error and Added Additional Info/Projects

--- a/css/custom.css
+++ b/css/custom.css
@@ -121,6 +121,10 @@ p {
     text-decoration: underline;
 }
 
+.projects-box {
+
+}
+
 /* Contact Me
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 #contact a {
