--- a/css/custom.css
+++ b/css/custom.css
@@ -39,8 +39,8 @@ p {
 /* Sections
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 .section {
-    padding-top: 5rem;
-    padding-bottom: 5rem;
+    padding-top: 3rem;
+    padding-bottom: 3rem;
 }
 
 /* Header
@@ -121,8 +121,47 @@ p {
     text-decoration: underline;
 }
 
-.projects-box {
+.projects-card {
+    background-color: white;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
 
+.projects-img {
+    max-width: 100%;
+    height: auto;
+}
+
+.projects-img:hover projects-overlay {
+    width: 100%;
+    left: 0;
+}
+
+.projects-overlay {
+    position: absolute;
+    bottom: 0;
+    left: 100%;
+    right: 0;
+    background-color: #008CBA;
+    overflow: hidden;
+    width: 0;
+    height: 100%;
+    transition: .5s ease;
+}
+
+.project-overlay-text {
+    white-space: nowrap; 
+    color: white;
+    font-size: 20px;
+    position: absolute;
+    overflow: hidden;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+}
+
+.projects-text {
+    padding: 10px;
 }
 
 /* Contact Me
