--- a/css/fontello.css
+++ b/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?34388988');
-  src: url('../font/fontello.eot?34388988#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?34388988') format('woff2'),
-       url('../font/fontello.woff?34388988') format('woff'),
-       url('../font/fontello.ttf?34388988') format('truetype'),
-       url('../font/fontello.svg?34388988#fontello') format('svg');
+  src: url('../font/fontello.eot?45090460');
+  src: url('../font/fontello.eot?45090460#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?45090460') format('woff2'),
+       url('../font/fontello.woff?45090460') format('woff'),
+       url('../font/fontello.ttf?45090460') format('truetype'),
+       url('../font/fontello.svg?45090460#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?34388988#fontello') format('svg');
+    src: url('../font/fontello.svg?45090460#fontello') format('svg');
   }
 }
 */
@@ -56,9 +56,7 @@
 }
  
 .icon-mail:before { content: '\e800'; } /* '' */
-.icon-right-dir:before { content: '\e801'; } /* '' */
-.icon-link-ext:before { content: '\f08e'; } /* '' */
-.icon-linkedin:before { content: '\f0e1'; } /* '' */
-.icon-github:before { content: '\f113'; } /* '' */
+.icon-link:before { content: '\e801'; } /* '' */
+.icon-github-circled:before { content: '\f09b'; } /* '' */
 .icon-code:before { content: '\f121'; } /* '' */
-.icon-copyright:before { content: '\f1f9'; } /* '' */
+.icon-linkedin-squared:before { content: '\f30c'; } /* '' */
